--- a/assets/RiotGAMES.html
+++ b/assets/RiotGAMES.html
@@ -10,21 +10,19 @@
 <body>
 <div class="nav-container">
 
-
          <div class="logo">
                  <img  src="riot-games-logo.svg" alt="riot-games-logo">
          </div>
 
           <nav>
               <ul class="Navigatie">
-
-                    <li>Who we are</li>
-                    <li>Work with us</li>
-                    <li>News</li>
-
+                    <li><a href="#">Who we are</a></li>
+                    <li><a href="#">Work with us</a></li>
+                    <li><a href="#">News</a></li>
               </ul>
          </nav>
 
 </div>
 </body>
 </html>
+
