--- a/assets/RiotGAMES.html
+++ b/assets/RiotGAMES.html
@@ -8,21 +8,23 @@
 
 
 <body>
-<div class="nav-container">
+<nav class="nav-container">
+    <div class="logo">
+        <img  src="riot-games-logo.svg" alt="riot-games-logo">
+    </div>
 
-         <div class="logo">
-                 <img  src="riot-games-logo.svg" alt="riot-games-logo">
-         </div>
+    <div class="sub-nav">
+        <ul class="Navigatie">
+            <li><a href="#">Who we are</a></li>
+            <li><a href="#">Work with us</a></li>
+            <li><a href="#">News</a></li>
+        </ul>
+    </div>
 
-          <nav>
-              <ul class="Navigatie">
-                    <li><a href="#">Who we are</a></li>
-                    <li><a href="#">Work with us</a></li>
-                    <li><a href="#">News</a></li>
-              </ul>
-         </nav>
-
-</div>
+    <div class="sing-in-nav">
+        <a class="sing-in-button" href="#">Sing-in</a>
+    </div>
+</nav>
 </body>
 </html>
 
