--- a/assets/RiotGAMES.html
+++ b/assets/RiotGAMES.html
@@ -5,9 +5,14 @@
     <title>Title</title>
     <link rel="stylesheet" href="riot-games.css">
 </head>
-
-
 <body>
+<header>
+<video class="hero_new__video" autoplay="" playsinline=""
+       poster="https://www.riotgames.com/darkroom/1920/f277926f65f932fad572f88b04d57c4b:79ca86b2c1d8302b93bf04aad5f03c71/w24-riot-homepage-back-up.jpg"
+       muted="" loop="" preload="auto">
+    <source src="https://www.riotgames.com/darkroom/original/d2224a81b271091b06d91da597aefe0d:c18d41cc833ebc0f52c48f0f927049ac/trophystraight-effect-full.mp4"
+            type="video/mp4">
+</video>
 <nav class="nav-container">
     <div class="logo">
         <img  src="riot-games-logo.svg" alt="riot-games-logo">
@@ -25,6 +30,7 @@
         <a class="sing-in-button" href="#">Sing-in</a>
     </div>
 </nav>
+</header>
 </body>
 </html>
 
